[AP] Add support to set/clear constraints on AWM
This patch provides the required support to dispatch a request to set/clear
a set of constraints on the AWMs of the calling application.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/include/bbque/rtlib/rpc_fifo_server.h.in
+++ b/include/bbque/rtlib/rpc_fifo_server.h.in
@@ -115,6 +115,8 @@ RPC_FIFO_DEFINE_MESSAGE(APP_EXIT);
 
 RPC_FIFO_DEFINE_MESSAGE(EXC_REGISTER);
 RPC_FIFO_DEFINE_MESSAGE(EXC_UNREGISTER);
+RPC_FIFO_DEFINE_MESSAGE(EXC_SET);
+RPC_FIFO_DEFINE_MESSAGE(EXC_CLEAR);
 RPC_FIFO_DEFINE_MESSAGE(EXC_START);
 RPC_FIFO_DEFINE_MESSAGE(EXC_STOP);
 RPC_FIFO_DEFINE_MESSAGE(EXC_SCHEDULE);
