[Application] Bugfixed misconfiguration of DEBUG configuration
The configuration flags are centrally managed by the top-level CMake
configuration file. Thus, this patch remove an unnecessary and dangerous
definition of CMAKE_CXX_FLAGS_DEBUG which indeed overrided the general configuration
thus exposing a misbehavior of the Logger class used by classes of this modele.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -53,8 +53,8 @@ add_executable (barbeque ${BARBEQUE_SRC})
 target_link_libraries(
 	barbeque
 	bbque_utils
-	application_objs
 	resource_accounting
+	apps
 	${Boost_LIBRARIES}
 )
 
