[Test] Initial import
This is a dirty and simple, yet incomplete, test framework which should be
better developed to properly suppport BBQ REGRESSION TESTING.

Right now it provides a simple test to verify the AWMs constraint assertion
API.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ link_directories(
 add_subdirectory (rtlib)
 add_subdirectory (plugins)
 add_subdirectory (bbque)
+add_subdirectory (test)
 
 
 ################################################################################
