[CM] Add option to run as daemon
This patch add few simple command line option and corresponding accessory
method to check if BBQ is required to be daemonized and which lockfile to
use.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -25,6 +25,21 @@
  * Installation PATHs
  ******************************************************************************/
 
+/** The Barbeque DAEMON name */
+#define BBQUE_DAEMON_NAME "${BBQUE_DAEMON_NAME}"
+
+/** The Barbeque DAEMON user ID */
+#define BBQUE_DAEMON_UID "${BBQUE_DAEMON_UID}"
+
+/** The Barbeque DAEMON group ID */
+#define BBQUE_DAEMON_GID "${BBQUE_DAEMON_GID}"
+
+/** The Barbeque DAEMON 'lockfile' path */
+#define BBQUE_DAEMON_LOCKFILE "${BBQUE_DAEMON_LOCKFILE}"
+
+/** The Barbeque DAEMON run-directory path */
+#define BBQUE_DAEMON_RUNDIR "${BBQUE_DAEMON_RUNDIR}"
+
 /** The installation path */
 #define BBQUE_PATH_PREFIX "${CMAKE_INSTALL_PREFIX}"
 
