[Configure] Add daemonization support
This patch provides an overall available external reference to the daemonization
flag which is provided by the daemonization routine. This flag could be used
by all BBQ modules to check if we are running as daemon or in foreground,
e.g. to use the proper logging channel.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -18,6 +18,8 @@
 #ifndef BBQUE_CONFIG_H_
 #define BBQUE_CONFIG_H_
 
+#include <syslog.h>
+
 /** Use Boost Filesyste library version 3 */
 #define BOOST_FILESYSTEM_VERSION 3
 
@@ -66,5 +68,9 @@
 
 /** The 'var' installation path */
 #define BBQUE_PATH_VAR "${BBQUE_PATH_VAR}"
+
+
+/* A global variable to signal if we are running as a daemon */
+extern unsigned char daemonized;
 
 #endif // BBQUE_CONFIG_H_
