--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -33,11 +33,11 @@
 /** The Barbeque DAEMON user ID */
 #define BBQUE_DAEMON_UID "${BBQUE_DAEMON_UID}"
 
-/** The Barbeque DAEMON group ID */
-#define BBQUE_DAEMON_GID "${BBQUE_DAEMON_GID}"
-
 /** The Barbeque DAEMON 'lockfile' path */
 #define BBQUE_DAEMON_LOCKFILE "${BBQUE_DAEMON_LOCKFILE}"
+
+/** The Barbeque DAEMON 'pidfile' path */
+#define BBQUE_DAEMON_PIDFILE "${BBQUE_DAEMON_PIDFILE}"
 
 /** The Barbeque DAEMON run-directory path */
 #define BBQUE_DAEMON_RUNDIR "${BBQUE_DAEMON_RUNDIR}"
