[CM] Define default conf file using CMake
The name of the default configuration file could be defined at compile
time by means of the BBQUE_CONF_FILE variable. The value of this variable
is also available as define within the config.h header.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -42,6 +42,9 @@
 /** The Barbeque DAEMON run-directory path */
 #define BBQUE_DAEMON_RUNDIR "${BBQUE_DAEMON_RUNDIR}"
 
+/** The Barbeque configuration file */
+#define BBQUE_CONF_FILE "${BBQUE_CONF_FILE}"
+
 /** The installation path */
 #define BBQUE_PATH_PREFIX "${CMAKE_INSTALL_PREFIX}"
 
