--- a/rtlib/monitors/CMakeLists.txt
+++ b/rtlib/monitors/CMakeLists.txt
@@ -4,6 +4,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
 
 set (MONITORS_SRC time_monitor ${PROJECT_BINARY_DIR}/bbque/version.cc)
 set (MONITORS_SRC throughput_monitor memory_monitor ${MONITORS_SRC})
+set (MONITORS_SRC op_manager ${MONITORS_SRC})
 
 #----- Add "bbque_monitors" target dinamic binary
 add_library(bbque_monitors SHARED ${MONITORS_SRC})
@@ -29,7 +30,11 @@ set_property (TARGET bbque_monitors PROPERTY PUBLIC_HEADER
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/time_window.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/throughput_monitor.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/throughput_window.h
-	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/memory_monitor.h)
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/memory_monitor.h
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/metric_priority.h
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/operating_point.h
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/op_filter.h
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/op_manager.h)
 
 
 # Install Monitors
