[SchedPol_YaMS] YaMS modular scheduling
Add a new scheduling policy plugin which name stands for:
"Yet another Multiobjective Scheduler".

This policy is based on the computing of a metrics resulting by a weighted
sum of an extensible set of contributes (checkout class MetricsContribute).
To add other contributes, please checkout comment string "ADD_MCT".

The weights of the single contributes are configurable through the
BarbequeRTRM configuration file.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -28,7 +28,23 @@
 # Scheduler Manager Options
 ################################################################################
 [SchedulerManager]
-#policy = yamca
+#policy = yams
+
+################################################################################
+# Yams Scheduling Policy: Metrics Contribute weights
+################################################################################
+[MetricsContribute]
+# Global parameters [0,100]
+msl.pe       = 	90
+msl.mem      = 	70
+# Contribute specific parameters
+awmvalue.weight        = 2
+congestion.weight      = 1
+congestion.expbase     = 2
+congestion.penalty.pe  = 75
+congestion.penalty.mem = 50
+reconfig.weight        = 1
+reconfig.migfact       = 4
 
 ################################################################################
 # Synchronization Manager Options
