[RTLIB_AS-RTRM] Updated CMakeLists.txt
This commit updates the file CMakeLists.txt to support the installation
of the new functionalities provided by the ApplicationRTRM.

Signed-off-by: Vincenzo Consales <vincenzo.consales@gmail.com>
Signed-off-by: Patrick Bellasi <derkling@gmail.com>
Acked-by: Andrea Di Gesare <andrea.digesare@gmail.com>

--- a/rtlib/monitors/CMakeLists.txt
+++ b/rtlib/monitors/CMakeLists.txt
@@ -4,6 +4,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
 
 set (MONITORS_SRC time_monitor ${PROJECT_BINARY_DIR}/bbque/version.cc)
 set (MONITORS_SRC throughput_monitor memory_monitor ${MONITORS_SRC})
+set (MONITORS_SRC application_rtrm ${MONITORS_SRC})
 set (MONITORS_SRC op_manager ${MONITORS_SRC})
 
 #----- Add "bbque_monitors" target dinamic binary
@@ -34,7 +35,8 @@ set_property (TARGET bbque_monitors PROPERTY PUBLIC_HEADER
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/metric_priority.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/operating_point.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/op_filter.h
-	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/op_manager.h)
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/op_manager.h
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/application_rtrm.h)
 
 
 # Install Monitors
