[BuildSystem] Bugfix configuration escapes
The bbqued.in shell script make use of ${}-devined shell variables.
This patch swith to @ONLY CMake syntax to avoid configuration warning.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -31,6 +31,7 @@ configure_file (
 configure_file (
 	"${PROJECT_SOURCE_DIR}/config/bbqued.in"
 	"${PROJECT_BINARY_DIR}/config/bbqued"
+	@ONLY
 )
 configure_file (
 	"${PROJECT_SOURCE_DIR}/config/bbqued.defaults.in"
