[BuildSystem] Force AS-RTRM after RTLib
This patch ensure that the RTLib target is build before the AS-RTRM related
stuff. This is required since Monitors, OPManager and ApplicationRTRM classes
depends on some RTLib service (e.g. they expect some headers file being
deployed).

The BbqueEXC header is deployed under the building folder, right under the
include/bbque directory where it is expected to be at run-time. This
allows to keep the same sources for the compilation of both AS-RTRM library
and its client applications.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -5,6 +5,12 @@ configure_file (
 	"${PROJECT_BINARY_DIR}/bbque/version.cc" @ONLY
 )
 
+## Copy the AEM header file where it is expected by AS-RTRM
+configure_file (
+	"${PROJECT_SOURCE_DIR}/include/bbque/rtlib/bbque_exc.h"
+	"${PROJECT_BINARY_DIR}/include/bbque/bbque_exc.h" COPYONLY
+)
+
 # Add "barbeque" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
