[RTLIB_AS-RTRM] Bugfix headers file inclusion
The AS-RTRM headers are deployed under the building folder, right under the
include/bbque/monitors directory where they are expected to be at run-time.
This allows to keep the same sources for the compilation of both the AS-RTRM
library and its client applications as well.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/monitors/CMakeLists.txt
+++ b/rtlib/monitors/CMakeLists.txt
@@ -7,6 +7,11 @@ set (MONITORS_SRC throughput_monitor memory_monitor ${MONITORS_SRC})
 set (MONITORS_SRC application_rtrm ${MONITORS_SRC})
 set (MONITORS_SRC op_manager ${MONITORS_SRC})
 
+# Copy headers where they are expected by applications
+file (COPY "${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors"
+	DESTINATION "${PROJECT_BINARY_DIR}/include/bbque"
+	FILES_MATCHING PATTERN "*.h")
+
 #----- Add "bbque_monitors" target dinamic binary
 add_library(bbque_monitors SHARED ${MONITORS_SRC})
 
