[Tools_PLP] Conditionally set CFS quota
The CFS quota controller is available since Linux Kernel 3.2, moreover it
is a compilation option. This patch ensure to have this support on the
mounted hierarchy to properly compile the BPL description.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbqued.in
+++ b/config/bbqued.in
@@ -101,6 +101,12 @@ setup() {
 		fi
 	fi
 
+	# Check for CFS quota support
+	if [ ! -f $BBQUE_CGMOUNT/cpu.cfs_quota_us ]; then
+		echo "Disabling CFS Quota suppport (Error: not available)"
+		CGROUP_FEATURES_CPUQ="N"
+	fi
+
 	# Getting the total platform available CPUs and MEMs
 	PLAT_CPUS=`cat $BBQUE_CGMOUNT/cpuset.cpus`
 	PLAT_MEMS=`cat $BBQUE_CGMOUNT/cpuset.mems`
@@ -110,6 +116,7 @@ setup() {
 		$BBQUE_PILPARSER \
 				-v BBQUE_PLAT_CPUS="$PLAT_CPUS" \
 				-v BBQUE_PLAT_MEMS="$PLAT_MEMS" \
+				-v BBQUE_FEAT_CPUQ="$CGROUP_FEATURES_CPUQ" \
 				$PILSETUP > $CGSETUP
 	fi
 
