[Daemon] Add SYSROOT property
This patch add a new SYSROOT env variable which track explicitly where BBQ
has been installed. This makes the etc/defaults/bbqued file on hand as a
general configuration for BBQ related scripts (e.g. the bbque-console).

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbqued.defaults.in
+++ b/config/bbqued.defaults.in
@@ -34,4 +34,7 @@ CGPARSER='${CMAKE_INSTALL_PREFIX}/sbin/cgconfigparser'
 # The mountpoint of the BBQ CGroup hierarchy
 CGMOUNT='${CMAKE_INSTALL_PREFIX}/${BBQUE_PIL_CGROUP_MOUNT}'
 #
+# The prefix for the BBQ installation
+SYSROOT='${CMAKE_INSTALL_PREFIX}'
+#
 # vim: set tabstop=4:
