[Tools_Console] Makes it more general
The previous version had hard-coded paths, this new one make use of the
variables defined by "etc/defaults/bbqued" and add support for console
redefinition of all them. Thus the scripts is now more portable.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -16,7 +16,12 @@ install(PROGRAMS bbquePlatformLayoutParser.awk
 # - have a name starting by "bbque-"
 
 #----- Deploy the BBQ Control Console script
-install(PROGRAMS bbqueConsole.sh
+configure_file (
+	"${PROJECT_SOURCE_DIR}/tools/bbqueConsole.sh.in"
+	"${PROJECT_BINARY_DIR}/tools/bbqueConsole.sh"
+	@ONLY
+)
+install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueConsole.sh"
 	DESTINATION ${BBQUE_PATH_BBQ}
 	COMPONENT BarbequeUTILS
 	RENAME bbque-console)
