[Tools_OPLB] Add a simple OP List Builder script
This is a simple filter to translate an XML OPs file into a statically
allocates vector of operating points, which type is the OperatingPointsList
class as defined by bbque/monitors/operating_point.h

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -25,3 +25,9 @@ install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueConsole.sh"
 	DESTINATION ${BBQUE_PATH_BBQ}
 	COMPONENT BarbequeUTILS
 	RENAME bbque-console)
+
+#----- Deploy the BBQ OP List generator script
+install(PROGRAMS "${PROJECT_SOURCE_DIR}/tools/bbqueOpListBuilder.awk"
+	DESTINATION ${BBQUE_PATH_BBQ}
+	COMPONENT BarbequeUTILS
+	RENAME bbque-oplb)
