[PP] Enable TEST PLATFORM MODE building
This patch allows to build the BarbequeRTRM in Test Platform Mode by
specifying -DBBQUE_TEST_PLATFORM_DATA=1 at the CMake command line. When
running in this modality, all the target specific platform control
facilities are disabled.

This could be a convenient way to use BBQ for initial application development
and integration without worry about daemon setup or running BBQ as root.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -80,6 +80,9 @@
 /** Use FIFO based RPC channel */
 #cmakedefine BBQUE_RPC_FIFO
 
+/** Use Test Platform Data */
+#cmakedefine BBQUE_TEST_PLATFORM_DATA
+
 
 /*******************************************************************************
  * BarbequeRTMR Global Features
