[RTLIB_PERF] Make Perf support optional
A BBQUE_RTLIB_PERF_SUPPORT compilation option has been added to conditionally
compile the Performance Counters code within the RTLib. By default they
are enabled, however they could be easily disabled by passing
-DBBQUE_RTLIB_PERF_SUPPORT=0 at the CMake command line.

This is useful to port easily the RTLib on platforms not supporting
performance counters such as some Android devices with older kernels.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,10 @@ option (BBQUE_RPC_FIFO
 option (BBQUE_TEST_PLATFORM_DATA
 	"Use TEST Platform Data instead of ResourceAbstraction module" OFF)
 
+# Performance Counters: enabled them on RTLib (defaulf: YES)
+option (BBQUE_RTLIB_PERF_SUPPORT
+	"Build RTLib with Performance Counters support" ON)
+
 ################################################################################
 # Lookup for library dependencies
 ################################################################################
