[BuildSystem] Align library naming convention
Some libraries have been renamed to be aligned to the naming convention in
use. This means that a "bbque_" suffix has been added.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -67,8 +67,8 @@ add_executable (barbeque ${BARBEQUE_SRC})
 target_link_libraries(
 	barbeque
 	bbque_utils
-	resource_accounting
-	apps
+	bbque_resources
+	bbque_apps
 	${Boost_LIBRARIES}
 	${CGroup_LIBRARIES}
 )
