--- a/plugins/schedpol/contrib/CMakeLists.txt
+++ b/plugins/schedpol/contrib/CMakeLists.txt
@@ -13,6 +13,6 @@ set (METRICS_CONTRIB_SRC mct_reconfig ${METRICS_CONTRIB_SRC})
 set (METRICS_CONTRIB_SRC mct_congestion ${METRICS_CONTRIB_SRC})
 
 # Add as library
-add_library(sched_metrics STATIC ${METRICS_CONTRIB_SRC})
-set_target_properties(sched_metrics PROPERTIES LINKER_LANGUAGE CXX)
+add_library(bbque_sched_metrics STATIC ${METRICS_CONTRIB_SRC})
+set_target_properties(bbque_sched_metrics PROPERTIES LINKER_LANGUAGE CXX)
 
