[BuildSystem] Move FIFO conf option into config.h
All the BarbequeRTRM build configuration options should be placed within
the config.h header file. This allows for an easy and straightforward
configuration of the framework at compile time, indeed:
1. the CMakeFile.txt define a set of configuration options with their
   default values
2. at command line, the user could customize the build by properly setting
   a set of CMake configuration options, e.g. "-DBBQUE_RPC_FIFO=0" to disable
   the usage of FIFOs as RPC channel

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,8 @@ endif (CMAKE_INSTALL_PREFIX STREQUAL "/usr/local")
 ################################################################################
 
 # RPC Channel abstraction: use FIFO implementation (defaulf: YES)
-option (BBQUE_RPC_FIFO "Build RTLib with FIFO channel support" ON)
+option (BBQUE_RPC_FIFO
+	"Build RTLib with FIFO channel support" ON)
 
 # Platform data: use hard-coded TEST configuration (defaulf: YES)
 option (BBQUE_TEST_PLATFORM_DATA "Use TEST Platform Data instead of
