[RA] Namespace change
Since ResourceAccounter is a core component of the BarbequeRTRM framework,
it has been moved from namespace bbque::res to bbque::

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/bbque/res/CMakeLists.txt
+++ b/bbque/res/CMakeLists.txt
@@ -5,9 +5,8 @@ include_directories(
 )
 
 # Add sources in the current directory to the target binary
-set (RESOURCES_SRC resource_accounter)
+set (RESOURCES_SRC resources)
 set (RESOURCES_SRC resource_tree ${RESOURCES_SRC})
-set (RESOURCES_SRC resources ${RESOURCES_SRC})
 
 #Add as library
 add_library(bbque_resources STATIC ${RESOURCES_SRC})
