--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -48,6 +48,7 @@ set (BARBEQUE_SRC barbeque version object configuration_manager console_logger)
 set (BARBEQUE_SRC platform_services dynamic_library ${BARBEQUE_SRC})
 set (BARBEQUE_SRC plugin_manager modules_factory ${BARBEQUE_SRC})
 set (BARBEQUE_SRC resource_manager application_manager ${BARBEQUE_SRC})
+set (BARBEQUE_SRC resource_accounter ${BARBEQUE_SRC})
 set (BARBEQUE_SRC application_proxy rpc_proxy ${BARBEQUE_SRC})
 set (BARBEQUE_SRC platform_proxy ${BARBEQUE_SRC})
 set (BARBEQUE_SRC pp/linux ${BARBEQUE_SRC})
