[Tools] Add a BBQ stress test
This is the initial version of a stress test for the BarbequeRTRM which spawn
a random number of BbqueRTLibTestApp applications. This number could be
fixed by specifying a value for the APPS environment variable, e.g.:
APPS=2 ./out/sbin/bbque-stest
will run a stress test with 2 concurrent applications.

In order to test different possible run-time scenarios, each application is
started and with a randomized workload and cycles-count demand.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -26,6 +26,17 @@ install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueConsole.sh"
 	COMPONENT BarbequeUTILS
 	RENAME bbque-console)
 
+#----- Deploy the BBQ Stress Test script
+configure_file (
+	"${PROJECT_SOURCE_DIR}/tools/bbqueStressTest.sh.in"
+	"${PROJECT_BINARY_DIR}/tools/bbqueStressTest.sh"
+	@ONLY
+)
+install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueStressTest.sh"
+	DESTINATION ${BBQUE_PATH_BBQ}
+	COMPONENT BarbequeUTILS
+	RENAME bbque-stest)
+
 #----- Deploy the BBQ OP List generator script
 install(PROGRAMS "${PROJECT_SOURCE_DIR}/tools/bbqueOpListBuilder.awk"
 	DESTINATION ${BBQUE_PATH_BBQ}
